Release CMTK-1.3.0:

- Fix: volume_reconstruction and volume_injection tools now convert affine ITK
    transformations (i.e., such read from .tfm files) from native into
    standard space (Issue #4761).
- API: made all meta key strings C++ objects rather than cpp #defines; also
    removed CMTK_ prefix after moving them into cmtk namespace.
- API: renamed "InformationObject" class to more descriptive
    "MetaInformationObject"
- Fixed: various issues pointed out by "cppcheck" static code analysis.
- API: moved morphological operators from cmtk::DataGrid into separate class,
    cmtk::DataGridMorphologicalOperators.
- API: prevent copying of system classes where this would lead to problems.
- Added: filter, levelset, make_initial_affine, mrbias, and reformatx tools
    now support database updating.
- Added: database backend for storing images and transformations between their
    coordinate spaces.
- Added: "convertx --binarize-thresh" operation
- Bugfix: shared-library build configuration was broken.
- Bugfix: "convertx --mask-inverse" was broken.
- Added: "mk_phantom_3d" tool can now import either an image including
    existing pixel data or just the grid geometry.
- Added: "mk_phantom_3d" tool now supports three different coordinate modes:
    absolute, relative, indexed.
- Added: "--revert" image operation for "imagemath" tool to revert binary
    masks.
- API: moved "DrawXXX" members from "DataGrid" class into a new, dedicated
    painter class, "UniformVolumePainter."
- Added: image operation for medial skeleton based on analysis of the Hessian
    eigensystem. Note that this is currently broken and only kept for future
    investigation.
- Added: two differential operator members for "UniformVolume" class, one for
    gradient and one for Hessian matrix, each implemented using central
    differences.
- Added: symmetric eigensystem can now be sorted either by absolute or by
    actual eigenvalues.